@@ -95,6 +95,7 @@ Misc options:
                             .    3 = show duplicate ECMs
                             .    4 = packet debug
                             .    5 = packet debug + packet dump
+ -j --pid-report            | Report how much packets were received.
  -b --bench                 | Benchmark decrypton.
  -h --help                  | Show help screen.
  -V --version               | Show program version.
