@@ -1,6 +1,7 @@
 next : Version next
  * Add --output-tos (-g) option used to set output TOS value.
  * Add --input-dump (-W) option used save input stream in file.
+ * Add --pid-report (-j) option used to turn on PID reporting.
 
 2011-12-23 : Version 5.0
  * Add --bench (-b) option that benchmarks libdvbcsa decryption.
